@@ -624,7 +624,8 @@ ColumnStandard::tick (Treelog& msg,
                     *vegetation, *movement,
                     geometry, *soil, *soil_water, *soil_heat, 
                     msg);
-  vegetation->tick (time, *bioclimate, geometry, *soil, 
+  vegetation->tick (time, my_weather.relative_humidity (),
+                    *bioclimate, geometry, *soil, 
 		    organic_matter.get (),
                     *soil_heat, *soil_water, &soil_NH4, &soil_NO3, 
                     residuals_DM, residuals_N_top, residuals_C_top, 
