@@ -105,7 +105,8 @@ protected:
 
   // Simulation.
 public:
-  void tick (const Time& time, const Bioclimate&, const Geometry& geo,
+  void tick (const Time& time, double relative_humidity,
+             const Bioclimate&, const Geometry& geo,
              const Soil&,
 	     OrganicMatter*,
 	     const SoilHeat&, const SoilWater&, SoilNH4*, SoilNO3*,
@@ -1717,7 +1718,7 @@ void CropSold::emerge ()
 { var.Phenology.DS = -0.1; }
 
 void 
-CropSold::tick (const Time& time, 
+CropSold::tick (const Time& time, const double,
 		const Bioclimate& bioclimate,
                 const Geometry& geo,
 		const Soil& soil,
